Added bootstrap, further fine-tuning of examples.

--- a/apidoc.html
+++ b/apidoc.html
@@ -1,5 +1,6 @@
 ---
-layout: default
+layout: default-withsidebar
 title: HTML-based API documentation
+structureddocid: 1_1  
 ---
 <p>HTML content goes here</p>
