created auto-highlighting in sidebar nav

--- a/apidoc.html
+++ b/apidoc.html
@@ -1,6 +1,5 @@
 ---
 layout: default-withsidebar
-title: HTML-based API documentation
-structureddocid: 1_1  
+title: API documentation
 ---
 <p>HTML content goes here</p>
