--- a/pageAction.html
+++ b/pageAction.html
@@ -94,7 +94,7 @@ copyright: opera-google-ccby
 <p>
  Register your page action in the <a href="manifest.html">extension manifest</a> like this:
 </p>
-<pre>
+<pre class="prettyprint">
 {
 "name": "My extension",
 ...
@@ -112,7 +112,7 @@ copyright: opera-google-ccby
 <p>
  If you only provide one of the 19px or 38px icon size, the extension system will scale the icon you provide to the pixel density of the user's display, which can lose detail or make it look fuzzy. The old syntax for registering the default icon is still supported:
 </p>
-<pre>
+<pre class="prettyprint">
 {
 "name": "My extension",
 ...
@@ -356,7 +356,7 @@ copyright: opera-google-ccby
    <p>
     The <em>callback</em> parameter should specify a function that looks like this:
    </p>
-   <pre>
+   <pre class="prettyprint">
 function(string result) <span class="subdued">{...}</span>;
 </pre>
    <dl>
@@ -463,7 +463,7 @@ function(string result) <span class="subdued">{...}</span>;
    <p>
     If you specify the <em>callback</em> parameter, it should specify a function that looks like this:
    </p>
-   <pre>
+   <pre class="prettyprint">
 function() <span class="subdued">{...}</span>;
 </pre>
   </div>
@@ -581,7 +581,7 @@ function() <span class="subdued">{...}</span>;
    <p>
     The <em>callback</em> parameter should specify a function that looks like this:
    </p>
-   <pre>
+   <pre class="prettyprint">
 function(string result) <span class="subdued">{...}</span>;
 </pre>
    <dl>
