--- a/windows.html
+++ b/windows.html
@@ -39,7 +39,7 @@ You can use this module to
 create, modify, and rearrange windows in the browser.
 </p>
 
-<img src="../static/images/windows.png"
+<img src="static/images/windows.png"
      width="256" height="76" alt="Two windows, each with one tab" />
 
 <h2 id="manifest">Manifest</h2>
