couple of small corrections to links

--- a/index.html
+++ b/index.html
@@ -7,5 +7,5 @@ copyright: opera-ccby
 <div class="hero-unit">
  {% include h1.html %}
  <p>Interesting text goes here.</p>
- <p><a href="article.html" class="btn btn-primary btn-large">Learn more &raquo;</a></p>
+ <p><a href="tut_getting_started.html" class="btn btn-primary btn-large">Learn more &raquo;</a></p>
 </div>
