added class=prettyprint (prettify.js) to all <pre>s

--- a/alarms.html
+++ b/alarms.html
@@ -249,7 +249,7 @@ copyright: opera-google-ccby
                           The <em>callback</em> parameter should specify a function
                           that looks like this:
                     </p>
-                    <pre>function(<a href="alarms.html#type-Alarm">Alarm</a> alarm) <span class="subdued">{...}</span>;</pre>
+                    <pre class="prettyprint">function(<a href="alarms.html#type-Alarm">Alarm</a> alarm) <span class="subdued">{...}</span>;</pre>
                     <dl>
                         <div>
                           <a name="property-callback-alarm"></a>
@@ -295,7 +295,7 @@ copyright: opera-google-ccby
                           The <em>callback</em> parameter should specify a function
                           that looks like this:
                     </p>
-                    <pre>function(array of <a href="alarms.html#type-Alarm">Alarm</a> alarms) <span class="subdued">{...}</span>;</pre>
+                    <pre class="prettyprint">function(array of <a href="alarms.html#type-Alarm">Alarm</a> alarms) <span class="subdued">{...}</span>;</pre>
                     <dl>
                         <div>
                           <a name="property-callback-alarms"></a>
