--- a/i18n.html
+++ b/i18n.html
@@ -131,14 +131,14 @@ Some notes about internationalizing:
     In <code>manifest.json</code>
     and CSS files,
     refer to a string named <em>messagename</em> like this:
-    <pre>__MSG_<em>messagename</em>__</pre>
+    <pre class="prettyprint">__MSG_<em>messagename</em>__</pre>
   </li>
 
   <li>
     In your extension or app's JavaScript code,
     refer to a string named <em>messagename</em>
     like this:
-    <pre>chrome.i18n.getMessage("<em>messagename</em>")</pre>
+    <pre class="prettyprint">chrome.i18n.getMessage("<em>messagename</em>")</pre>
 
   <li> <p>
     In each call to <code>getMessage()</code>,
@@ -170,7 +170,7 @@ Some notes about internationalizing:
     provides help to translators,
     who might not be able to see how the string is used in your extension.
     For example:
-<pre>
+<pre class="prettyprint">
 {
   "search_string": {
     "message": "hello%20world",
@@ -276,7 +276,7 @@ Here's an example of using <code>@@extension_id</code> in a CSS file
 to construct a URL:
 </p>
 
-<pre>
+<pre class="prettyprint">
 body {
   <b>background-image:url('chrome-extension://__MSG_@@extension_id__/background.png');</b>
 }
@@ -287,7 +287,7 @@ If the extension ID is abcdefghijklmnopqrstuvwxyzabcdef,
 then the bold line in the previous code snippet becomes:
 </p>
 
-<pre>
+<pre class="prettyprint">
 background-image:url('chrome-extension://abcdefghijklmnopqrstuvwxyzabcdef/background.png');
 </pre>
 
@@ -295,7 +295,7 @@ background-image:url('chrome-extension://abcdefghijklmnopqrstuvwxyzabcdef/backgr
 Here's an example of using <code>@@bidi_*</code> messages in a CSS file:
 </p>
 
-<pre>
+<pre class="prettyprint">
 body {
   <b>direction: __MSG_@@bidi_dir__;</b>
 }
@@ -315,7 +315,7 @@ For left-to-right languages such as English,
 the bold lines become:
 </p>
 
-<pre>
+<pre class="prettyprint">
 dir: ltr;
 padding-left: 0;
 padding-right: 1.5em;
@@ -441,7 +441,7 @@ with a particular locale:
     <code>--user-data-dir</code> flags.
     The target should look something like this:
 
-<pre><em>path_to_chrome.exe</em> --lang=<em>locale</em> --user-data-dir=c:\<em>locale_profile_dir</em></pre>
+<pre class="prettyprint"><em>path_to_chrome.exe</em> --lang=<em>locale</em> --user-data-dir=c:\<em>locale_profile_dir</em></pre>
   </li>
 
   <li>
@@ -456,7 +456,7 @@ you might create a shortcut named <code>chrome-es</code>
 that has the following target:
 </p>
 
-<pre><em>path_to_chrome.exe</em> --lang=es --user-data-dir=c:\chrome-profile-es</pre>
+<pre class="prettyprint"><em>path_to_chrome.exe</em> --lang=es --user-data-dir=c:\chrome-profile-es</pre>
 
 <p>
 You can create as many shortcuts as you like,
@@ -464,7 +464,7 @@ making it easy to test in multiple languages.
 For example:
 </p>
 
-<pre><em>path_to_chrome.exe</em> --lang=en --user-data-dir=c:\chrome-profile-en
+<pre class="prettyprint"><em>path_to_chrome.exe</em> --lang=en --user-data-dir=c:\chrome-profile-en
 <em>path_to_chrome.exe</em> --lang=en_GB --user-data-dir=c:\chrome-profile-en_GB
 <em>path_to_chrome.exe</em> --lang=ko --user-data-dir=c:\chrome-profile-ko</pre>
 
@@ -525,7 +525,7 @@ and launch Google Chrome.
 For example:
 </p>
 
-<pre>
+<pre class="prettyprint">
 LANGUAGE=es ./chrome
 </pre>
 
@@ -557,7 +557,7 @@ It replaces two placeholders within the message with the strings
 "string1" and "string2".
 </p>
 
-<pre>
+<pre class="prettyprint">
 function getMessage() {
   var message = chrome.i18n.getMessage("click_here", ["string1", "string2"]);
   document.getElementById("languageSpan").innerHTML = message;
@@ -568,7 +568,7 @@ function getMessage() {
 Here's how you'd supply and use a single string:
 </p>
 
-<pre>
+<pre class="prettyprint">
 <em>// In JavaScript code</em>
 status.innerText = chrome.i18n.getMessage("error", errorDetails);
 
@@ -598,7 +598,7 @@ The following code gets accept-languages from the browser and displays them as a
 string by separating each accept-language with ','.
 </p>
 
-<pre>
+<pre class="prettyprint">
 function getAcceptLanguages() {
   chrome.i18n.getAcceptLanguages(function(languageList) {
     var languages = languageList.join(",");
@@ -643,7 +643,7 @@ For details on calling <code>getAcceptLanguages()</code>, see the
                           The <em>callback</em> parameter should specify a function
                           that looks like this:
                     </p>
-                    <pre>function(array of string languages) <span class="subdued">{...}</span>;</pre>
+                    <pre class="prettyprint">function(array of string languages) <span class="subdued">{...}</span>;</pre>
                     <dl>
                         <div>
                           <a name="property-callback-languages"></a>
