--- a/idle.html
+++ b/idle.html
@@ -51,7 +51,7 @@ copyright: opera-google-ccby
 For example:
 </p>
 
-<pre>{
+<pre class="prettyprint">{
   "name": "My extension",
   ...
   <b>"permissions": [
@@ -106,7 +106,7 @@ For example:
                           The <em>callback</em> parameter should specify a function
                           that looks like this:
                     </p>
-                    <pre>function(enumerated string ["active""idle""locked"] newState) <span class="subdued">{...}</span>;</pre>
+                    <pre class="prettyprint">function(enumerated string ["active""idle""locked"] newState) <span class="subdued">{...}</span>;</pre>
                     <dl>
                         <div>
                           <a name="property-callback-newState"></a>
