--- a/management.html
+++ b/management.html
@@ -36,7 +36,7 @@ The <code>chrome.management</code> module provides ways to manage the list of ex
 in the <a href="manifest.html">extension manifest</a>
 to use the management API.
 For example:</p>
-<pre>{
+<pre class="prettyprint">{
   "name": "My extension",
   ...
   <b>"permissions": [
@@ -391,7 +391,7 @@ For example:</p>
                           If you specify the <em>callback</em> parameter, it should
                           specify a function that looks like this:
                     </p>
-                    <pre>function(array of <a href="management.html#type-ExtensionInfo">ExtensionInfo</a> result) <span class="subdued">{...}</span>;</pre>
+                    <pre class="prettyprint">function(array of <a href="management.html#type-ExtensionInfo">ExtensionInfo</a> result) <span class="subdued">{...}</span>;</pre>
                     <dl>
                         <div>
                           <a name="property-callback-result"></a>
@@ -452,7 +452,7 @@ For example:</p>
                           If you specify the <em>callback</em> parameter, it should
                           specify a function that looks like this:
                     </p>
-                    <pre>function(<a href="management.html#type-ExtensionInfo">ExtensionInfo</a> result) <span class="subdued">{...}</span>;</pre>
+                    <pre class="prettyprint">function(<a href="management.html#type-ExtensionInfo">ExtensionInfo</a> result) <span class="subdued">{...}</span>;</pre>
                     <dl>
                         <div>
                           <a name="property-callback-result"></a>
@@ -513,7 +513,7 @@ For example:</p>
                           If you specify the <em>callback</em> parameter, it should
                           specify a function that looks like this:
                     </p>
-                    <pre>function(array of string permissionWarnings) <span class="subdued">{...}</span>;</pre>
+                    <pre class="prettyprint">function(array of string permissionWarnings) <span class="subdued">{...}</span>;</pre>
                     <dl>
                         <div>
                           <a name="property-callback-permissionWarnings"></a>
@@ -574,7 +574,7 @@ For example:</p>
                           If you specify the <em>callback</em> parameter, it should
                           specify a function that looks like this:
                     </p>
-                    <pre>function(array of string permissionWarnings) <span class="subdued">{...}</span>;</pre>
+                    <pre class="prettyprint">function(array of string permissionWarnings) <span class="subdued">{...}</span>;</pre>
                     <dl>
                         <div>
                           <a name="property-callback-permissionWarnings"></a>
@@ -650,7 +650,7 @@ For example:</p>
                           If you specify the <em>callback</em> parameter, it should
                           specify a function that looks like this:
                     </p>
-                    <pre>function() <span class="subdued">{...}</span>;</pre>
+                    <pre class="prettyprint">function() <span class="subdued">{...}</span>;</pre>
                 </div>
               </div>
               <div>
@@ -728,7 +728,7 @@ For example:</p>
                           If you specify the <em>callback</em> parameter, it should
                           specify a function that looks like this:
                     </p>
-                    <pre>function() <span class="subdued">{...}</span>;</pre>
+                    <pre class="prettyprint">function() <span class="subdued">{...}</span>;</pre>
                 </div>
               </div>
               <div>
@@ -791,7 +791,7 @@ For example:</p>
                           If you specify the <em>callback</em> parameter, it should
                           specify a function that looks like this:
                     </p>
-                    <pre>function() <span class="subdued">{...}</span>;</pre>
+                    <pre class="prettyprint">function() <span class="subdued">{...}</span>;</pre>
                 </div>
               </div>
               <div>
@@ -838,7 +838,7 @@ For example:</p>
                           If you specify the <em>callback</em> parameter, it should
                           specify a function that looks like this:
                     </p>
-                    <pre>function() <span class="subdued">{...}</span>;</pre>
+                    <pre class="prettyprint">function() <span class="subdued">{...}</span>;</pre>
                 </div>
               </div>
             <h3 id="events">Events</h3>
