--- a/pageAction.html
+++ b/pageAction.html
@@ -70,7 +70,7 @@ Register your page action in the
 like this:
 </p>
 
-<pre>{
+<pre class="prettyprint">{
   "name": "My extension",
   ...
   <b>"page_action": {
@@ -91,7 +91,7 @@ can lose detail or make it look fuzzy. The old syntax for registering the
 default icon is still supported:
 </p>
 
-<pre>{
+<pre class="prettyprint">{
   "name": "My extension",
   ...
   <b>"page_action": {
@@ -348,7 +348,7 @@ For other examples and for help in viewing the source code, see
                           The <em>callback</em> parameter should specify a function
                           that looks like this:
                     </p>
-                    <pre>function(string result) <span class="subdued">{...}</span>;</pre>
+                    <pre class="prettyprint">function(string result) <span class="subdued">{...}</span>;</pre>
                     <dl>
                         <div>
                           <a name="property-callback-result"></a>
@@ -472,7 +472,7 @@ For other examples and for help in viewing the source code, see
                           If you specify the <em>callback</em> parameter, it should
                           specify a function that looks like this:
                     </p>
-                    <pre>function() <span class="subdued">{...}</span>;</pre>
+                    <pre class="prettyprint">function() <span class="subdued">{...}</span>;</pre>
                 </div>
               </div>
               <div>
@@ -595,7 +595,7 @@ For other examples and for help in viewing the source code, see
                           The <em>callback</em> parameter should specify a function
                           that looks like this:
                     </p>
-                    <pre>function(string result) <span class="subdued">{...}</span>;</pre>
+                    <pre class="prettyprint">function(string result) <span class="subdued">{...}</span>;</pre>
                     <dl>
                         <div>
                           <a name="property-callback-result"></a>
