--- a/runtime.html
+++ b/runtime.html
@@ -254,7 +254,7 @@ copyright: opera-google-ccby
                           The <em>callback</em> parameter should specify a function
                           that looks like this:
                     </p>
-                    <pre>function(global backgroundPage) <span class="subdued">{...}</span>;</pre>
+                    <pre class="prettyprint">function(global backgroundPage) <span class="subdued">{...}</span>;</pre>
                     <dl>
                         <div>
                           <a name="property-callback-backgroundPage"></a>
@@ -354,7 +354,7 @@ copyright: opera-google-ccby
                           The <em>callback</em> parameter should specify a function
                           that looks like this:
                     </p>
-                    <pre>function(enumerated string ["throttled", "no_update", "update_available"] status, object details) <span class="subdued">{...}</span>;</pre>
+                    <pre class="prettyprint">function(enumerated string ["throttled", "no_update", "update_available"] status, object details) <span class="subdued">{...}</span>;</pre>
                     <dl>
                         <div>
                           <a name="property-callback-status"></a>
@@ -524,7 +524,7 @@ copyright: opera-google-ccby
                           If you specify the <em>responseCallback</em> parameter, it should
                           specify a function that looks like this:
                     </p>
-                    <pre>function(any response) <span class="subdued">{...}</span>;</pre>
+                    <pre class="prettyprint">function(any response) <span class="subdued">{...}</span>;</pre>
                     <dl>
                         <div>
                           <a name="property-responseCallback-response"></a>
@@ -658,7 +658,7 @@ copyright: opera-google-ccby
                           The <em>sendResponse</em> parameter should specify a function
                           that looks like this:
                     </p>
-                    <pre>function() <span class="subdued">{...}</span>;</pre>
+                    <pre class="prettyprint">function() <span class="subdued">{...}</span>;</pre>
                 </div>
               </div>
               <div>
@@ -678,7 +678,7 @@ copyright: opera-google-ccby
                           The <em>sendResponse</em> parameter should specify a function
                           that looks like this:
                     </p>
-                    <pre>function() <span class="subdued">{...}</span>;</pre>
+                    <pre class="prettyprint">function() <span class="subdued">{...}</span>;</pre>
                 </div>
               </div>
         </div>
