--- a/browserAction.html
+++ b/browserAction.html
@@ -73,7 +73,7 @@ Register your browser action in the
 like this:
 </p>
 
-<pre>{
+<pre class="prettyprint">{
   "name": "My extension",
   ...
   <b>"browser_action": {
@@ -94,7 +94,7 @@ can lose detail or make it look fuzzy. The old syntax for registering the
 default icon is still supported:
 </p>
 
-<pre>{
+<pre class="prettyprint">{
   "name": "My extension",
   ...
   <b>"browser_action": {
@@ -370,7 +370,7 @@ For other examples and for help in viewing the source code, see
                           The <em>callback</em> parameter should specify a function
                           that looks like this:
                     </p>
-                    <pre>function(string result) <span class="subdued">{...}</span>;</pre>
+                    <pre class="prettyprint">function(string result) <span class="subdued">{...}</span>;</pre>
                     <dl>
                         <div>
                           <a name="property-callback-result"></a>
@@ -479,7 +479,7 @@ For other examples and for help in viewing the source code, see
                           If you specify the <em>callback</em> parameter, it should
                           specify a function that looks like this:
                     </p>
-                    <pre>function() <span class="subdued">{...}</span>;</pre>
+                    <pre class="prettyprint">function() <span class="subdued">{...}</span>;</pre>
                 </div>
               </div>
               <div>
@@ -602,7 +602,7 @@ For other examples and for help in viewing the source code, see
                           The <em>callback</em> parameter should specify a function
                           that looks like this:
                     </p>
-                    <pre>function(string result) <span class="subdued">{...}</span>;</pre>
+                    <pre class="prettyprint">function(string result) <span class="subdued">{...}</span>;</pre>
                     <dl>
                         <div>
                           <a name="property-callback-result"></a>
@@ -739,7 +739,7 @@ For other examples and for help in viewing the source code, see
                           The <em>callback</em> parameter should specify a function
                           that looks like this:
                     </p>
-                    <pre>function(string result) <span class="subdued">{...}</span>;</pre>
+                    <pre class="prettyprint">function(string result) <span class="subdued">{...}</span>;</pre>
                     <dl>
                         <div>
                           <a name="property-callback-result"></a>
@@ -877,7 +877,7 @@ For other examples and for help in viewing the source code, see
                           The <em>callback</em> parameter should specify a function
                           that looks like this:
                     </p>
-                    <pre>function(<a href="browserAction.html#type-ColorArray">ColorArray</a> result) <span class="subdued">{...}</span>;</pre>
+                    <pre class="prettyprint">function(<a href="browserAction.html#type-ColorArray">ColorArray</a> result) <span class="subdued">{...}</span>;</pre>
                     <dl>
                         <div>
                           <a name="property-callback-result"></a>
