--- a/contextMenus.html
+++ b/contextMenus.html
@@ -83,7 +83,7 @@ for display next to your menu item.
 For example:
 </p>
 
-<pre>{
+<pre class="prettyprint">{
   "name": "My extension",
   ...
   "permissions": [
@@ -520,7 +520,7 @@ You can find samples of this API on the
                           If you specify the <em>callback</em> parameter, it should
                           specify a function that looks like this:
                     </p>
-                    <pre>function() <span class="subdued">{...}</span>;</pre>
+                    <pre class="prettyprint">function() <span class="subdued">{...}</span>;</pre>
                 </div>
               </div>
               <div>
@@ -702,7 +702,7 @@ You can find samples of this API on the
                           If you specify the <em>callback</em> parameter, it should
                           specify a function that looks like this:
                     </p>
-                    <pre>function() <span class="subdued">{...}</span>;</pre>
+                    <pre class="prettyprint">function() <span class="subdued">{...}</span>;</pre>
                 </div>
               </div>
               <div>
@@ -753,7 +753,7 @@ You can find samples of this API on the
                           If you specify the <em>callback</em> parameter, it should
                           specify a function that looks like this:
                     </p>
-                    <pre>function() <span class="subdued">{...}</span>;</pre>
+                    <pre class="prettyprint">function() <span class="subdued">{...}</span>;</pre>
                 </div>
               </div>
               <div>
@@ -788,7 +788,7 @@ You can find samples of this API on the
                           If you specify the <em>callback</em> parameter, it should
                           specify a function that looks like this:
                     </p>
-                    <pre>function() <span class="subdued">{...}</span>;</pre>
+                    <pre class="prettyprint">function() <span class="subdued">{...}</span>;</pre>
                 </div>
               </div>
             <h3 id="events">Events</h3>
