--- a/extension.html
+++ b/extension.html
@@ -287,7 +287,7 @@ For details, see
                           The <em>callback</em> parameter should specify a function
                           that looks like this:
                     </p>
-                    <pre>function(boolean isAllowedAccess) <span class="subdued">{...}</span>;</pre>
+                    <pre class="prettyprint">function(boolean isAllowedAccess) <span class="subdued">{...}</span>;</pre>
                     <dl>
                         <div>
                           <a name="property-callback-isAllowedAccess"></a>
@@ -336,7 +336,7 @@ For details, see
                           The <em>callback</em> parameter should specify a function
                           that looks like this:
                     </p>
-                    <pre>function(boolean isAllowedAccess) <span class="subdued">{...}</span>;</pre>
+                    <pre class="prettyprint">function(boolean isAllowedAccess) <span class="subdued">{...}</span>;</pre>
                     <dl>
                         <div>
                           <a name="property-callback-isAllowedAccess"></a>
