--- a/tabs.html
+++ b/tabs.html
@@ -47,7 +47,7 @@ in the <a href="manifest.html">extension manifest</a>.
 For example:
 </p>
 
-<pre>{
+<pre class="prettyprint">{
   "name": "My extension",
   ...
   <b>"permissions": [
@@ -381,7 +381,7 @@ For other examples and for help in viewing the source code, see
                           The <em>callback</em> parameter should specify a function
                           that looks like this:
                     </p>
-                    <pre>function(<a href="tabs.html#type-Tab">Tab</a> tab) <span class="subdued">{...}</span>;</pre>
+                    <pre class="prettyprint">function(<a href="tabs.html#type-Tab">Tab</a> tab) <span class="subdued">{...}</span>;</pre>
                     <dl>
                         <div>
                           <a name="property-callback-tab"></a>
@@ -427,7 +427,7 @@ For other examples and for help in viewing the source code, see
                           The <em>callback</em> parameter should specify a function
                           that looks like this:
                     </p>
-                    <pre>function(<a href="tabs.html#type-Tab">Tab</a> tab) <span class="subdued">{...}</span>;</pre>
+                    <pre class="prettyprint">function(<a href="tabs.html#type-Tab">Tab</a> tab) <span class="subdued">{...}</span>;</pre>
                     <dl>
                         <div>
                           <a name="property-callback-tab"></a>
@@ -554,7 +554,7 @@ For other examples and for help in viewing the source code, see
                           If you specify the <em>responseCallback</em> parameter, it should
                           specify a function that looks like this:
                     </p>
-                    <pre>function(any response) <span class="subdued">{...}</span>;</pre>
+                    <pre class="prettyprint">function(any response) <span class="subdued">{...}</span>;</pre>
                     <dl>
                         <div>
                           <a name="property-responseCallback-response"></a>
@@ -709,7 +709,7 @@ For other examples and for help in viewing the source code, see
                           If you specify the <em>callback</em> parameter, it should
                           specify a function that looks like this:
                     </p>
-                    <pre>function(<a href="tabs.html#type-Tab">Tab</a> tab) <span class="subdued">{...}</span>;</pre>
+                    <pre class="prettyprint">function(<a href="tabs.html#type-Tab">Tab</a> tab) <span class="subdued">{...}</span>;</pre>
                     <dl>
                         <div>
                           <a name="property-callback-tab"></a>
@@ -773,7 +773,7 @@ For other examples and for help in viewing the source code, see
                           If you specify the <em>callback</em> parameter, it should
                           specify a function that looks like this:
                     </p>
-                    <pre>function(<a href="tabs.html#type-Tab">Tab</a> tab) <span class="subdued">{...}</span>;</pre>
+                    <pre class="prettyprint">function(<a href="tabs.html#type-Tab">Tab</a> tab) <span class="subdued">{...}</span>;</pre>
                     <dl>
                         <div>
                           <a name="property-callback-tab"></a>
@@ -1003,7 +1003,7 @@ For other examples and for help in viewing the source code, see
                           The <em>callback</em> parameter should specify a function
                           that looks like this:
                     </p>
-                    <pre>function(array of <a href="tabs.html#type-Tab">Tab</a> result) <span class="subdued">{...}</span>;</pre>
+                    <pre class="prettyprint">function(array of <a href="tabs.html#type-Tab">Tab</a> result) <span class="subdued">{...}</span>;</pre>
                     <dl>
                         <div>
                           <a name="property-callback-result"></a>
@@ -1096,7 +1096,7 @@ For other examples and for help in viewing the source code, see
                           The <em>callback</em> parameter should specify a function
                           that looks like this:
                     </p>
-                    <pre>function(<a href="windows.html#type-Window">windows.Window</a> window) <span class="subdued">{...}</span>;</pre>
+                    <pre class="prettyprint">function(<a href="windows.html#type-Window">windows.Window</a> window) <span class="subdued">{...}</span>;</pre>
                     <dl>
                         <div>
                           <a name="property-callback-window"></a>
@@ -1251,7 +1251,7 @@ For other examples and for help in viewing the source code, see
                           If you specify the <em>callback</em> parameter, it should
                           specify a function that looks like this:
                     </p>
-                    <pre>function(<a href="tabs.html#type-Tab">Tab</a> tab) <span class="subdued">{...}</span>;</pre>
+                    <pre class="prettyprint">function(<a href="tabs.html#type-Tab">Tab</a> tab) <span class="subdued">{...}</span>;</pre>
                     <dl>
                         <div>
                           <a name="property-callback-tab"></a>
@@ -1362,7 +1362,7 @@ For other examples and for help in viewing the source code, see
                           If you specify the <em>callback</em> parameter, it should
                           specify a function that looks like this:
                     </p>
-                    <pre>function(<a href="tabs.html#type-Tab">Tab</a> or array of <a href="tabs.html#type-Tab">Tab</a> tabs) <span class="subdued">{...}</span>;</pre>
+                    <pre class="prettyprint">function(<a href="tabs.html#type-Tab">Tab</a> or array of <a href="tabs.html#type-Tab">Tab</a> tabs) <span class="subdued">{...}</span>;</pre>
                     <dl>
                         <div>
                           <a name="property-callback-tabs"></a>
@@ -1458,7 +1458,7 @@ For other examples and for help in viewing the source code, see
                           If you specify the <em>callback</em> parameter, it should
                           specify a function that looks like this:
                     </p>
-                    <pre>function() <span class="subdued">{...}</span>;</pre>
+                    <pre class="prettyprint">function() <span class="subdued">{...}</span>;</pre>
                 </div>
               </div>
               <div>
@@ -1506,7 +1506,7 @@ For other examples and for help in viewing the source code, see
                           If you specify the <em>callback</em> parameter, it should
                           specify a function that looks like this:
                     </p>
-                    <pre>function() <span class="subdued">{...}</span>;</pre>
+                    <pre class="prettyprint">function() <span class="subdued">{...}</span>;</pre>
                 </div>
               </div>
               <div>
@@ -1553,7 +1553,7 @@ For other examples and for help in viewing the source code, see
                           The <em>callback</em> parameter should specify a function
                           that looks like this:
                     </p>
-                    <pre>function(string language) <span class="subdued">{...}</span>;</pre>
+                    <pre class="prettyprint">function(string language) <span class="subdued">{...}</span>;</pre>
                     <dl>
                         <div>
                           <a name="property-callback-language"></a>
@@ -1666,7 +1666,7 @@ For other examples and for help in viewing the source code, see
                           The <em>callback</em> parameter should specify a function
                           that looks like this:
                     </p>
-                    <pre>function(string dataUrl) <span class="subdued">{...}</span>;</pre>
+                    <pre class="prettyprint">function(string dataUrl) <span class="subdued">{...}</span>;</pre>
                     <dl>
                         <div>
                           <a name="property-callback-dataUrl"></a>
@@ -1748,7 +1748,7 @@ For other examples and for help in viewing the source code, see
                           If you specify the <em>callback</em> parameter, it should
                           specify a function that looks like this:
                     </p>
-                    <pre>function(array of any result) <span class="subdued">{...}</span>;</pre>
+                    <pre class="prettyprint">function(array of any result) <span class="subdued">{...}</span>;</pre>
                     <dl>
                         <div>
                           <a name="property-callback-result"></a>
@@ -1830,7 +1830,7 @@ For other examples and for help in viewing the source code, see
                           If you specify the <em>callback</em> parameter, it should
                           specify a function that looks like this:
                     </p>
-                    <pre>function() <span class="subdued">{...}</span>;</pre>
+                    <pre class="prettyprint">function() <span class="subdued">{...}</span>;</pre>
                 </div>
               </div>
             <h3 id="events">Events</h3>
