--- a/windows.html
+++ b/windows.html
@@ -53,7 +53,7 @@ decided to just share one permission between them.)
 For example:
 </p>
 
-<pre>{
+<pre class="prettyprint">{
   "name": "My extension",
   ...
   <b>"permissions": ["tabs"]</b>,
@@ -378,7 +378,7 @@ For other examples and for help in viewing the source code, see
                           The <em>callback</em> parameter should specify a function
                           that looks like this:
                     </p>
-                    <pre>function(<a href="windows.html#type-Window">Window</a> window) <span class="subdued">{...}</span>;</pre>
+                    <pre class="prettyprint">function(<a href="windows.html#type-Window">Window</a> window) <span class="subdued">{...}</span>;</pre>
                     <dl>
                         <div>
                           <a name="property-callback-window"></a>
@@ -458,7 +458,7 @@ For other examples and for help in viewing the source code, see
                           The <em>callback</em> parameter should specify a function
                           that looks like this:
                     </p>
-                    <pre>function(<a href="windows.html#type-Window">Window</a> window) <span class="subdued">{...}</span>;</pre>
+                    <pre class="prettyprint">function(<a href="windows.html#type-Window">Window</a> window) <span class="subdued">{...}</span>;</pre>
                     <dl>
                         <div>
                           <a name="property-callback-window"></a>
@@ -538,7 +538,7 @@ For other examples and for help in viewing the source code, see
                           The <em>callback</em> parameter should specify a function
                           that looks like this:
                     </p>
-                    <pre>function(<a href="windows.html#type-Window">Window</a> window) <span class="subdued">{...}</span>;</pre>
+                    <pre class="prettyprint">function(<a href="windows.html#type-Window">Window</a> window) <span class="subdued">{...}</span>;</pre>
                     <dl>
                         <div>
                           <a name="property-callback-window"></a>
@@ -618,7 +618,7 @@ For other examples and for help in viewing the source code, see
                           The <em>callback</em> parameter should specify a function
                           that looks like this:
                     </p>
-                    <pre>function(array of <a href="windows.html#type-Window">Window</a> windows) <span class="subdued">{...}</span>;</pre>
+                    <pre class="prettyprint">function(array of <a href="windows.html#type-Window">Window</a> windows) <span class="subdued">{...}</span>;</pre>
                     <dl>
                         <div>
                           <a name="property-callback-windows"></a>
@@ -815,7 +815,7 @@ For other examples and for help in viewing the source code, see
                           If you specify the <em>callback</em> parameter, it should
                           specify a function that looks like this:
                     </p>
-                    <pre>function(<a href="windows.html#type-Window">Window</a> window) <span class="subdued">{...}</span>;</pre>
+                    <pre class="prettyprint">function(<a href="windows.html#type-Window">Window</a> window) <span class="subdued">{...}</span>;</pre>
                     <dl>
                         <div>
                           <a name="property-callback-window"></a>
@@ -997,7 +997,7 @@ For other examples and for help in viewing the source code, see
                           If you specify the <em>callback</em> parameter, it should
                           specify a function that looks like this:
                     </p>
-                    <pre>function(<a href="windows.html#type-Window">Window</a> window) <span class="subdued">{...}</span>;</pre>
+                    <pre class="prettyprint">function(<a href="windows.html#type-Window">Window</a> window) <span class="subdued">{...}</span>;</pre>
                     <dl>
                         <div>
                           <a name="property-callback-window"></a>
@@ -1055,7 +1055,7 @@ For other examples and for help in viewing the source code, see
                           If you specify the <em>callback</em> parameter, it should
                           specify a function that looks like this:
                     </p>
-                    <pre>function() <span class="subdued">{...}</span>;</pre>
+                    <pre class="prettyprint">function() <span class="subdued">{...}</span>;</pre>
                 </div>
               </div>
             <h3 id="events">Events</h3>
