added multiple author support in _config.yml as per http://www.lostdecadegames.com/blog-author-attribution-using-jekyll/ also removed coauthor support, added free-form hat tip instead

--- a/tut_publishing_guidelines.html
+++ b/tut_publishing_guidelines.html
@@ -2,6 +2,7 @@
 layout: default-withsidebar
 title: Publishing guidelines
 copyright: opera-ccby
+author: andreasbovens
 ---
 INITIAL VERSION. NEEDS FURTHER EDITING
   <h2>Contents</h2>
